moddified the css navbar

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@ body{
 }
 .navbar{
     background-image: url(https://images.pexels.com/photos/1235398/pexels-photo-1235398.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-    width: 100%;
-    height: 35px;
 }
 .navbar ul{
     list-style: none;
@@ -116,8 +114,17 @@ button:nth-child(20){
 }
 @media (max-width: 860PX){
     .navbar ul li a{
-        font-size: 25px;
+        font-size: 15px;
         color: wheat;
         text-decoration: none;
+    }
+    .navbar ul{
+        list-style: none;
+        display: flex;
+        margin-left: 2px;
+        /* margin-left: 10px; */
+    }
+    .navbar a{
+        margin-left: 10px;
     }
 }
